--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.9.3",
         "alpinejs": "^3.2.3",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
         "laravel-mix": "^6.0.6",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.37.5",
-        "sass-loader": "^12.1.0",
-        "@popperjs/core": "^2.9.3"
+        "sass": "^1.38.1",
+        "sass-loader": "^12.1.0"
     }
 }
