--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.9.3",
-        "@vue/compiler-sfc": "^3.2.11",
         "alpinejs": "^3.2.3",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
         "laravel-mix": "^6.0.6",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.38.1",
+        "sass": "^1.37.5",
         "sass-loader": "^12.1.0",
-        "vue-loader": "^16.5.0"
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "vue": "^3.2.11"
+        "vue": "^2.6.14"
     }
 }
