--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,6 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
-        "laravel/horizon": "^5.7",
-        "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "predis/predis": "^1.1"
     },
@@ -22,7 +20,9 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "laravel/horizon": "^5.7",
+        "laravel/telescope": "^4.6"
     },
     "autoload": {
         "psr-4": {
