--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue": "^2.6.14",
         "vue-images-loaded": "^1.1.2",
         "vue-infinite-loading": "^2.4.5",
+        "vue-multiselect": "^2.1.6",
         "vueisotope": "^3.1.2"
     }
 }
