--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "@johmun/vue-tags-input": "^2.1.0",
         "vue": "^2.6.14",
         "vue-images-loaded": "^1.1.2",
         "vue-infinite-loading": "^2.4.5",
-        "vue-multiselect": "^2.1.6",
         "vueisotope": "^3.1.2"
     }
 }
