--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "fakerphp/faker": "^1.20",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,14 +17,14 @@
     },
     "require-dev": {
         "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.3",
+        "laravel/horizon": "^5.7",
         "laravel/sail": "^1.0.1",
+        "laravel/telescope": "^4.6",
+        "mmo/faker-images": "^0.6.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3",
-        "laravel/horizon": "^5.7",
-        "laravel/telescope": "^4.6"
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
