--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "ext-curl": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -21,7 +22,6 @@
         "laravel/horizon": "^5.7",
         "laravel/sail": "^1.0.1",
         "laravel/telescope": "^4.6",
-        "mmo/faker-images": "^0.6.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
